# VehicleMemBench

./: README.md  pyproject.toml
evaluation/: memorysystem_evaluation.py
evaluation/memorysystems/: __init__.py  memorybank.py
scripts/: base_test.sh
